Historico de operações com lista expandivel

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="alert_dialog_cancelar">Cancelar</string>
     <string name="alert_dialog_confirmar">Confirmar</string>
     <string name="limparDados">Limpar Dados</string>
+    <string name="sem_texto"></string>
 
 </resources>
